...
        .accessibilityIdentifier(AccessibilityID.FanClub.person(people))
        #endif
    }

    private var searchField: some View {
        SearchField(searchTextWrapper: searchTextWrapper,
                    placeholder: "Search actors",
                    isSearching: $isSearching,
                    focused: $isSearchFieldFocused)
    }

    private func listView(props: Props) -> some View {
        #if os(macOS)
...
                            if !props.peoples.isEmpty {
                                ForEach(props.peoples, id: \.self) { people in
                                    peopleNavigationLink(people: people)
                                }
                                Divider().padding(.vertical, 8)
                            }
                            Text("Popular people to add to your Fan Club")
                                .titleStyle()
                                .padding(.horizontal)
                                .padding(.top, 4)
                                .padding(.bottom, 6)
                            ForEach(props.popular, id: \.self) { people in
                                peopleNavigationLink(people: people)
...
